Fixes mis-labelling Lower C as A; also fixes vertical mis-alignment of speed slider (#14)

--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -94,7 +94,7 @@
 
       .speed-controls {
         text-align: center;
-        margin-top: -14px;
+        margin-top: -20px;
 
         .speed-label {
           font-size: 70%;
